--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Generate documentation
         run: |
-          python3 generate.py --output "./docs"
+          python3 generate_docs.py --schema "./schema" --example "./examples" --output "./docs"
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
