--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: CityJSON
+title: CityVehicleSpec
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Specification for public transit and mobility data.
-baseurl: "/cityjson" # the subpath of your site, e.g. /blog
+baseurl: "/cityvehiclespec" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  vchezganov
 
